# sshg

./: .drone.yml  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: publish.yaml  rust.yml
src/: config.rs  main.rs  ssh.rs  ui.rs
